--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "short_name": "React App",
-    "name": "Create To Do App Sample",
+    "name": "Create React App Sample",
     "icons": [
       {
         "src": "logo192.jpg",
